--- a/tex/24.tex
+++ b/tex/24.tex
@@ -375,7 +375,7 @@ def __init__(self, options):
         self.nu = 0.7 * 10**-2 # cm^2/s
 
         # Create right-hand side function
-        self.f = Constant(self.mesh, (0.0, 0.0, 0.0))
+        self.f = Constant((0.0, 0.0, 0.0))
         n = FacetNormal(self.mesh)
 
         # Set end-time
@@ -405,7 +405,7 @@ def __init__(self, ...)
     self.A2 = self.area(2)
 
 def area(self, i):
-    f = Constant(self.mesh, 1)
+    f = Constant(1)
     A = f*ds(i)
     a = assemble(A, exterior_facet_domains=self.sub_domains)
     return a
@@ -454,7 +454,7 @@ pressure are collected in the lists \emp{bcv}, \emp{bcp} and \emp{bcpsi}.
 def boundary_conditions(self, V, Q):
 
     # Create no-slip boundary condition for velocity
-    self.g0 = Constant(self.mesh, (0.0, 0.0, 0.0))
+    self.g0 = Constant((0.0, 0.0, 0.0))
     bc0 = DirichletBC(V, self.g0, self.contour)
 
     # Create function for inlet and outlet BC
@@ -474,8 +474,8 @@ def boundary_conditions(self, V, Q):
     return bcv, bcp, bcpsi
 
 def initial_conditions(self, V, Q):
-    u0 = Constant(self.mesh, (0.0, 0.0, 0.0))
-    p0 = Constant(self.mesh, 0.0)
+    u0 = Constant((0.0, 0.0, 0.0))
+    p0 = Constant(0.0)
     return u0, p0
 \end{python}
 
