Another update in Chapter 10 to work with unit tests

--- a/tex/10.tex
+++ b/tex/10.tex
@@ -2179,17 +2179,17 @@ solver.solve()
 \end{python}
 These classes may be used similarly from C++.
 
-These classes providesa range of parameters that can be adjusted to
-control the solution process. For example, to view the list of
-available parameters for a \emp{\{Linear,Nonlinear\}VariationalProblem}
-object \emp{problem}, issue the following commands:
+The solver classes provide a range of parameters that can be adjusted
+to control the solution process. For example, to view the list of
+available parameters for \emp{LinearVariationalSolver} or
+\emp{NonlinearVariationalSolver}, issue the following commands:
 %
 \begin{c++}
-info(problem.parameters, true)
+info(solver.parameters, true)
 \end{c++}
 %
 \begin{python}
-info(problem.parameters, True)
+info(solver.parameters, True)
 \end{python}
 
 %------------------------------------------------------------------------------
