Some small code fixes in Chapter 30

--- a/tex/30.tex
+++ b/tex/30.tex
@@ -570,7 +570,7 @@ int main()
 
   // Create a linear variational problem and solve
   pum::Function u(V);
-  solve(a == L, u, bcs);
+  solve(a == L, u, bcs=bcs);
 
   // Save solution to file for visualisation
   dolfin::File file("poisson.pvd");
@@ -927,7 +927,7 @@ NonlinearPoisson::BilinearForm dF(V, V);
 dF.u = u;
 
 // Solve nonlinear variational problem
-solve(F == 0, u, bc, dF);
+solve(F == 0, u, bcs=bc, J=dF);
 
 // Save solution in VTK format
 dolfin::File file("nonlinear_poisson.pvd");
