--- a/tex/4.tex
+++ b/tex/4.tex
@@ -541,14 +541,14 @@ Obtaining a basis for this space is somewhat more subtle.  FIAT and
 SyFi have developed different but mathematically equivalent solutions.
 In SyFi, since it uses a symbolic representation, the polynomial may be
 easily expressed in the power basis and the coefficients corresponding to
-second order polynomials normal to the edges are set to zero. In a similar
+$n$'th order polynomials normal to the edges are set to zero. In a similar
 fashion, FIAT utilizes the orthogonality of the Legendre polynomials
 to express the constraints the edges. That is, on the edge $E_i$
 the following constraints apply:
 \begin{equation}
 \ell^C_i( u ) = \int_{E_i} (u \cdot n) \mu_n^i = 0,
 \end{equation}
-where $\mu_n^i$ is the second order Legendre polynomial on the edge $E_i$.
+where $\mu_n^i$ is the $n$'th order Legendre polynomial on the edge $E_i$.
 
 In general, assume that we have $m$ constraints and $n-m$ degrees
 of freedom.  Let
