--- a/tex/10.tex
+++ b/tex/10.tex
@@ -2523,6 +2523,7 @@ Table~\ref{tab:logg-2:loglevels}.
     \emp{ERROR} & \emp{40} \\
     \emp{WARNING} & \emp{30} \\
     \emp{INFO} & \emp{20} \\
+    \emp{PROGRESS} & \emp{16} \\
     \emp{DBG} / \emp{DEBUG} & \emp{10} \\
     \bottomrule
   \end{tabular}
