--- a/tex/18.tex
+++ b/tex/18.tex
@@ -147,8 +147,8 @@ the incompressible UC equations as
 We note that to model a fluid--structure interaction problem, we can
 simply write the total stress $\sigma$ as a linear combination of
 fluid and solid stress using the $\theta$ phase function: $\sigma
-= \theta \sigma_f + (1 - \theta) \sigma_s$. We can also decompose the
-stress into a pressure $pI$ and deviatoric part: $\sigma = \sigma^D - pI$.
+= \theta \sigma^f + (1 - \theta) \sigma^s$. We can also decompose the
+stress into a pressure $p_{ij}$ and deviatoric part: $\sigma_{ij} = \sigma^D_{ij} - p \delta_{ij}$.
 
 The UC modeling framework is simple and compact, close to the
 formulation of the original conservation equations, and does not
@@ -164,8 +164,11 @@ constitutive equation impacts the formulation and implementation of
 the constitutive equation, but not the formulation and implementation
 of the conservation equations.
 
-In Unicorn we have currently implemented two constitutive laws:
-Newtonian fluid and incompressible Neo-Hookean solid \citep{HoffmanJanssonStockli2011}.
+In Unicorn we have currently implemented two constitutive laws, see \citet{HoffmanJanssonStockli2011} for details:
+\begin{align}
+\sigma^f_{ij} &= 2\mu_f \epsilon(u)_{ij} \quad &\text{(Newtonian fluid)}\\
+\frac{\partial \sigma^s_{ij}}{\partial t} &= 2\mu_s \epsilon(u)_{ij} + \frac{\partial u_i}{\partial x_j} \thinspace \sigma^s_{ij} + \sigma^s_{ij} \frac{\partial u_j}{\partial x_i} \quad &\text{(incompressible Neo-Hookean solid)}
+\end{align}
 
 %------------------------------------------------------------------------------
 \section{Space-time general Galerkin discretization}
@@ -190,7 +193,7 @@ $R(W) = (R_u(W), R_p(W), R_\theta(W))$ the residual. The residual is defined by
 %%
 \begin{equation} \label{eq:TotalModel}
   \begin{split}
-    R_u(W) &= \rho\left(\frac{\partial U_i}{\partial t} + U_j \frac{\partial U_i}{\partial x_j} \right) - \frac{\partial}{\partial x_j} \Sigma^D_{ij} + P - f_i,\\
+    R_u(W) &= \rho\left(\frac{\partial U_i}{\partial t} + U_j \frac{\partial U_i}{\partial x_j} \right) - \frac{\partial}{\partial x_j} \Sigma^D_{ij} + P \delta_{ij} - f_i,\\
     R_p(W) &= \frac{\partial U_j}{\partial x_j},\\
     R_\theta(W) &= \frac{\partial\Theta}{\partial t} + U_j \frac{\partial \Theta}{\partial x_j},
   \end{split}
@@ -256,7 +259,7 @@ solution of the phase convection equation, and we can remove it from
 the system. The resulting discrete UC equations are then defined by the residuals
 \begin{equation}
   \begin{split}\label{eq:ALE}
-    R_u(W) &= \rho\left(\frac{\partial U_i}{\partial t} + (U_j - \beta^h_j) \frac{\partial U_i}{\partial x_j} \right) - \frac{\partial}{\partial x_j} \Sigma^D_{ij} + P - f_i,
+    R_u(W) &= \rho\left(\frac{\partial U_i}{\partial t} + (U_j - \beta^h_j) \frac{\partial U_i}{\partial x_j} \right) - \frac{\partial}{\partial x_j} \Sigma^D_{ij} + P \delta_{ij} - f_i,
     \\
     R_p(W) &= \frac{\partial U_j}{\partial x_j}.
   \end{split}
@@ -270,10 +273,10 @@ may use local mesh modification operations (refinement, coarsening,
 swapping) on the mesh to maintain the quality
 \citep{Comp`ereRemacleJanssonEtAl2009}.
 
-\subsection{Streamline--diffusion stabilization}
+\subsection{Weighted least--squares stabilization}
 
 The standard FEM formulation is unstable.  We therefore consider a
-weighted standard streamline--diffusion method of the form
+weighted standard least--squares method of the form
 $\inner{R(W)}{v + \delta R(v)} = 0$ for all $v \in \hat{V}_{hk}$ (see
 \citet{ErikssonEstepHansboEtAl1996,HoffmanJohnson2007}) with $\delta > 0$ a stabilization
 parameter. We make simplifications by dropping the stabilization terms
@@ -283,8 +286,8 @@ UC model, the stabilized method thus takes the following form:
 %%
 \begin{align}
   \inner{R^u(W)}{v^u} &=
-  \inner{\rho(\frac{\partial U_i}{\partial t} + U_j \frac{\partial U_i}{\partial x_j} ) - f_i}{v^u_i} -
-  \inner{\Sigma^D_{ij} - P}{\frac{\partial}{\partial x_j} v^u_i} + SD^u(W, v^u) = 0, \\
+  \inner{\rho(\frac{\partial U_i}{\partial t} + U_j \frac{\partial U_i}{\partial x_j} ) - f_i}{v^u_i} +
+  \inner{\Sigma^D_{ij} + P \delta_{ij}}{\frac{\partial}{\partial x_j} v^u_i} + SD^u(W, v^u) = 0, \\
   \inner{R^p(W)}{v^p} &= \inner{\frac{\partial U_j}{\partial x_j}}{v^p} + SD^p(W, v^p) = 0,
 \end{align}
 for all $v \in \hat{V}_{hk}$, where
@@ -336,7 +339,7 @@ def S(u, P):
 def f(u, v):
     return -inner(grad(u)*u, v) + \
         inner(S(u, P), grad(v)) + \
-        -d1*inner(grad(u)*u, grad(v)*u) + \
+        -d1*inner(grad(u)*u + grad(P), grad(v)*u) + \
         -d2*inner(div(u), div(v)) + \
         dot(fsource, v)
 
@@ -1031,7 +1034,7 @@ distribution.
   \includegraphics[width=\largefig]{chapters/hoffman-2/png/fsi3_theta_050.png}\\
   \includegraphics[width=\largefig]{chapters/hoffman-2/png/fsi3_vel_250.png}\\
   \includegraphics[width=\largefig]{chapters/hoffman-2/png/fsi3_theta_250.png}
-  \caption{Velocity and phase function (with mesh) for times t = 1 and t = 5 for FSI benchmark and use case. Solution computed in parallel on a distributed meshwith 12 cores (5415 mesh points).}
+  \caption{Velocity and phase function (with mesh) for times t = 1 and t = 5.5 for FSI benchmark and use case. Solution computed in parallel on a distributed mesh with 12 cores (5415 mesh points).}
   \label{fig:fsi2D_plot2}
 \end{figure}
 
@@ -1043,7 +1046,7 @@ and used as verification of Unicorn
 in \citep{HoffmanJanssonStockli2011} and also in
 Chapter~\ref{chap:hoffman-1}. The velocity field and phase function
 $\theta$ are plotted in Figure~\ref{fig:fsi2D_plot2} for times t = 1
-and t = 5. We divide the use case into four parts:
+and t = 5.5. We divide the use case into four parts:
 
 \begin{description}
 \item[Geometry and subdomains] \ \\ The user specifies possible
@@ -1317,8 +1320,8 @@ void solve(Mesh& mesh, Checkpoint& chkp,
 
   ...
 
-  NSESolver psolver(mesh, node_normal, f, beta, aero_f, bc_mom, bc_con,
-    chkp, w_limit, td, "primal");
+  NSESolver psolver(mesh, node_normal, f, beta, aero_f,
+    bc_mom, bc_con, chkp, w_limit, td, "primal");
   psolver.solve();
 }
 
