--- a/tex/10.tex
+++ b/tex/10.tex
@@ -2865,6 +2865,10 @@ file = File("parameters.xml")
 file << parameters
 file >> parameters
 \end{python}
+At startup, DOLFIN automatically scans the current directory and the
+directory \emp{.fenics} in the user's home directory (in that order)
+for a file named \emp{dolfin\_parameters.xml}. If found, these
+parameters are read into DOLFIN's global parameter database.
 
 %------------------------------------------------------------------------------
 %------------------------------------------------------------------------------
