Fix typo in Chapter 18, more remain

--- a/tex/18.tex
+++ b/tex/18.tex
@@ -148,7 +148,7 @@ We note that to model a fluid--structure interaction problem, we can
 simply write the total stress $\sigma$ as a linear combination of
 fluid and solid stress using the $\theta$ phase function: $\sigma
 = \theta \sigma^f + (1 - \theta) \sigma^s$. We can also decompose the
-stress into a pressure $p_{ij}$ and deviatoric part: $\sigma_{ij} = \sigma^D_{ij} - p \delta_{ij}$.
+stress into a pressure part $p\delta_{ij}$ and deviatoric part: $\sigma_{ij} = \sigma^D_{ij} - p \delta_{ij}$.
 
 The UC modeling framework is simple and compact, close to the
 formulation of the original conservation equations, and does not
