Update location of standard config file for DOLFIN

--- a/tex/10.tex
+++ b/tex/10.tex
@@ -2866,8 +2866,8 @@ file << parameters
 file >> parameters
 \end{python}
 At startup, DOLFIN automatically scans the current directory and the
-directory \emp{.fenics} in the user's home directory (in that order)
-for a file named \emp{dolfin\_parameters.xml}. If found, these
+directory \emp{.config/fenics} in the user's home directory (in that
+order) for a file named \emp{dolfin\_parameters.xml}. If found, these
 parameters are read into DOLFIN's global parameter database.
 
 %------------------------------------------------------------------------------
